Updated logistic regression notebook

--- a/Logistic_Regression_with_stat_features.ipynb
+++ b/Logistic_Regression_with_stat_features.ipynb
@@ -691,10 +691,10 @@
    ],
    "source": [
     "# split the train and test data\n",
-    "x_train, x_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(features, target, test_size=0.2)\n",
     "\n",
     "# define the multinomial logistic regression model\n",
-    "model = LogisticRegression(multi_class='ovr', solver='liblinear')\n",
+    "model = LogisticRegression(multi_class='auto', solver='liblinear', random_state=42)\n",
     "\n",
     "# training the model\n",
     "st_time = time.time()\n",
